# openssh-portable

./: .gitignore  CMakeLists.txt  config-default.h.in  config-macos.h.in  injbefore.cmake  ldns.sh.in
contrib/win32/win32compat/: shell-host.c  spawn-ext.c  w32-sshfileperm.c
contrib/win32/win32compat/inc/: crtheaders.h  stdio.h
